Name:              stable-maps
Version:           0.0.5
Synopsis:          Heterogeneous maps keyed by StableNames
Description:       Provides an unsafe API for inserting heterogeneous data in a collection keyed by StableNames and for later retrieving it.
Homepage:          http://github.com/ekmett/stable-maps
Bug-Reports:       http://github.com/ekmett/stable-maps/issues
License:           BSD3
License-file:      LICENSE
Author:            Edward Kmett
Maintainer:        ekmett@gmail.com
Category:          Math
Build-type:        Simple
Cabal-version:     >=1.6
Extra-Source-Files: .travis.yml

source-repository head
  type: git
  location: git://github.com/ekmett/stable-maps.git

Library
  Exposed-modules: System.Mem.StableName.Map
                   System.Mem.StableName.Map.Unsafe
                   System.Mem.StableName.Dynamic
                   System.Mem.StableName.TypedMap
                   System.Mem.StableName.Dynamic.Map
                   System.Mem.StableName.TaggedSN
  Other-modules:   System.Mem.StableName.Map.Internal
  Build-depends:   base       >= 4   && < 5,
                   containers >= 0.3 && < 0.8,
                   hashable   >= 1.1.2,
                   unordered-containers
  GHC-Options:     -Wall
